[metadata]
name = planetcoveragefinder
description = Planet Coverage Finder helps find complete coverages of a user's area using PlanetScope scenes.
version = 0.2

[options]
packages = 
	planetcoveragefinder
	planetcoveragefinder.scripts
install_requires =
	click>=8
	fiona>=1.8
	shapely>=1.8
	pyproj>=3
	rasterio>=1.2
	tqdm>=4
	planet<2
	requests>=2.27
	waiting>=1.4.1
	python-dateutil>=2.8

[options.entry_points]
console_scripts =
    pcf = planetcoveragefinder.scripts.cli:cli
